--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,11 @@
 :root {
   --light: rgb(252, 252, 248);
-  --coral: rgb(223, 165, 154);
-  --pink: rgb(219, 122, 129);
-  --red: rgb(200, 46, 84);
+  --lavender: rgb(227, 206, 255);
 }
 
 * {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Montserrat";
+  border: none;
 }
 
 .loginform {
@@ -15,7 +14,7 @@
   margin-top: 10%;
   width: max-content;
   display: grid;
-  background-color: var(--coral);
+  background-color: var(--lavender);
   justify-content: space-around;
   padding: 5rem;
   border-radius: 12px;
@@ -28,7 +27,9 @@
 }
 
 .input {
-  border: 1px solid;
+  border: 0.5px solid;
+  font-size: large;
+  padding: 5px;
   width: 30rem;
   height: 2rem;
   margin: 5px;
@@ -41,7 +42,7 @@
 }
 
 .button {
-  border: 1px solid;
+  border: 0.5px solid;
   width: 5rem;
   height: 2rem;
   margin: 5px;
